<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/aboutLinearTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8.0dip"
        android:background="@drawable/shadow_effect"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="12.0dip" >

        <ImageView
            android:layout_width="80.0dip"
            android:layout_height="80.0dip"
            android:layout_marginTop="50.0dip"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#ffffffff"
            android:textSize="30.0sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Version 2.0"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#ff0000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgTelegram"
                android:layout_width="40.0dip"
                android:layout_height="40.0dip"
                android:src="@drawable/ic_telegram" />

            <ImageView
                android:id="@+id/imgYoutube"
                android:layout_width="40.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="10.0dip"
                android:src="@drawable/ic_youtube" />

            <ImageView
                android:id="@+id/imgGithub"
                android:layout_width="40.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="10.0dip"
                android:src="@drawable/ic_github" />

            <ImageView
                android:id="@+id/imgInstagram"
                android:layout_width="40.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="10.0dip"
                android:src="@drawable/ic_instagram" />

            <ImageView
                android:id="@+id/imgFacebook"
                android:layout_width="40.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="10.0dip"
                android:src="@drawable/ic_facebook" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8.0dip"
        android:text="@string/info"
        android:textSize="16.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.0dip"
        android:orientation="vertical"
        android:paddingLeft="10.0dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingBottom="10.0dip"
            android:text="@string/used_sources"
            android:textColor="#ff64cefd"
            android:textSize="20.0sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/git_modderhub"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="40.0dip"
                android:layout_height="40.0dip"
                android:layout_gravity="center"
                android:src="@drawable/ic_github" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5.0dip"
                    android:text="EncryptionDecryptionAlgorithms"
                    android:textColor="#ff0000"
                    android:textSize="20.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/git_modderhub"
                    android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>